--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,7 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+Google_Client_ID=
+Google_Client_Secret=
+Google_Client_Redirect=
