--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - composer update
   - composer install --no-interaction
   - php artisan key:generate
+  - php artisan migrate
 
 script:
 - vendor/bin/phpunit
