--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_script:
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate
+  - npm install
+  - npm run dev
 
 script:
 - vendor/bin/phpunit
@@ -18,3 +20,4 @@ script:
 cache:
   directories:
   - ./vendor
+  - ./node_modules
