Root directory now redirects to the login page. Changed tests to reflect that. Changed mix files to version styles and script files  Changes to be committed: 	modified:   package.json 	deleted:    public/css/app.css 	deleted:    public/js/app.js 	modified:   public/mix-manifest.json 	new file:   resources/assets/css/vendor.css 	modified:   resources/views/layouts/app.blade.php 	modified:   routes/web.php 	modified:   tests/Feature/AuthTest.php 	deleted:    tests/Feature/ExampleTest.php 	modified:   tests/Feature/RouteTest.php 	modified:   webpack.mix.js

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-  "/js/app.js": "/js/app.js",
-  "/css/app.css": "/css/app.css",
-  "/js/sweetalert.js": "/js/sweetalert.js"
+  "/js/app.js": "/js/app.5e38c8e212f66a0e1536.js",
+  "/css/app.css": "/css/app.807bfc917c121d60ab3e.css",
+  "/js/sweetalert.js": "/js/sweetalert.8e8343191f606620b023.js",
+  "/css/vendor.css": "/css/vendor.css"
 }
